--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Lost Sword Archives</title>
   <link rel="stylesheet" href="style.css?v=4">
-  <script src="script.js?v=11" defer></script>
+  <script src="script.js?v=12" defer></script>
   <link rel="icon" type="image/x-icon" href="logo-alt.ico">
   <!-- Preload most used images -->
   <link rel="preload" href="side-quest-balan/first-part/webp-versions/lost-sword-comic-page-1.webp" as="image" type="image/webp">
@@ -39,6 +39,11 @@
           <div class="balan-label">Clicks: <span id="click-count">0</span></div>
           <button id="reset-clicks">Reset Clicks</button>
           <button id="mute-btn">shut up!</button>
+		  <select id="voice-select" style="margin-top:10px;">
+            <option value="voice1">@brh7557</option>
+            <option value="voice2">@Isnain_Khan</option>
+            <option value="voice3">@_morfaii_</option>
+          </select>
         </section>
         <aside class="shop shop-right">
           <h3>Balan Box</h3>
