--- a/index.html
+++ b/index.html
@@ -51,6 +51,13 @@
             <source srcset="sprites/balan-balan-clicker/webp-versions/balan-sprite.webp" type="image/webp">
             <img id="balan" class="balan-image" src="sprites/balan-balan-clicker/png-versions/balan-sprite.png" alt="balan sprite" decoding="async">
           </picture>
+
+          <!-- SECRET BUTTON (hidden until 10000 clicks) -->
+          <button id="secret-btn" class="secret-btn" hidden aria-hidden="true">Search for body.</button>
+
+          <!-- Small voice credit text -->
+          <div class="voice-credit" id="voice-credit">Voiced by @brh7557 on youtube.</div>
+
           <div class="balan-label">Happy Coins: <span id="happy-coins">0</span></div>
           <div class="balan-label">Clicks: <span id="click-count">0</span></div>
           <button id="reset-clicks">Reset Clicks</button>
